--- a/frontend/src/app/core/components/superadmin/main/main.component.html
+++ b/frontend/src/app/core/components/superadmin/main/main.component.html
@@ -126,12 +126,12 @@
           <h2 class="page-title">{{ pageTitle }}</h2>
         </div>
 
-        <!--Admin Account-->
-        <div class="header-account">
-          <div class="account-text">
-            <div class="account-name">Juan Dela Cruz</div>
-            <div class="account-role">Super Administrator</div>
-          </div>
+          <!-- Admin Account -->
+          <div class="header-account">
+            <div class="account-text">
+              <div class="account-name">{{ accountName }}</div>
+              <div class="account-role">{{ accountRole }}</div>
+            </div>
           <div class="profile-dropdown">
             <img
               src="assets/images/default_superadmin_icon.png"
