add global styling for mat-flat-button

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -120,3 +120,7 @@ body {
 .mdc-list-item__primary-text {
   font-family: var(--font-base) !important;
 }
+
+[mat-flat-button] {
+  color: white !important;
+}
