improve role display

--- a/frontend/src/app/core/components/superadmin/main/main.component.html
+++ b/frontend/src/app/core/components/superadmin/main/main.component.html
@@ -130,7 +130,7 @@
           <div class="header-account">
             <div class="account-text">
               <div class="account-name">{{ accountName }}</div>
-              <div class="account-role">{{ accountRole }}</div>
+              <div class="account-role">PUPT-FLSS {{ accountRole }}</div>
             </div>
           <div class="profile-dropdown">
             <img
