--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div class="app-root-body" [@fadeAnimation]="outlet.isActivated ? outlet.activatedRoute : ''">
+<div class="app-root-body" 
+    [@fadeAnimation]="outlet.isActivated ? outlet.activatedRoute : ''">
     <router-outlet #outlet="outlet"></router-outlet>
 </div>
