add animations to components

--- a/frontend/src/app/core/components/faculty/home/home.component.html
+++ b/frontend/src/app/core/components/faculty/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="faculty-home-container">
+<div class="faculty-home-container" [@fadeAnimation]>
   <!--Home first row-->
   <div class="home-row-one">
     <!--Home greertings-->
@@ -10,7 +10,7 @@
     <div id="active_semester">
       <!--Active Semester Text-->
       <div id="semester_text">
-        <mat-icon>school</mat-icon>
+        <span mat-symbol="school"></span>
         <span>1st Semester, A.Y. 2024-2025</span>
       </div>
 
