--- a/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum.component.html
@@ -1,4 +1,4 @@
-<div class="curriculum-container">
+<div class="curriculum-container" [@fadeAnimation]>
   <!-- Table Header -->
   <div class="curriculum-header-container">
     <app-table-header
