--- a/frontend/src/app/core/components/superadmin/maintenance/rooms/rooms.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/rooms/rooms.component.html
@@ -1,4 +1,4 @@
-<div class="rooms-container">
+<div class="rooms-container" [@fadeAnimation]>
   <!--Table Header-->
   <div class="rooms-header-container">
     <app-table-header
