--- a/frontend/src/app/core/components/superadmin/maintenance/programs/programs.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/programs/programs.component.html
@@ -1,4 +1,4 @@
-<div class="programs-container">
+<div class="programs-container" [@fadeAnimation]>
   <!--Table Header-->
   <div class="programs-header-container">
     <app-table-header
