rename to account code

--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -23,7 +23,7 @@
       <!-- Form Header -->
       <div id="form_header">
         <h1>Log In</h1>
-        <p>Enter your code and password to start your session.</p>
+        <p>Enter your account code and password to start your session.</p>
       </div>
 
       <!-- Form Fields -->
@@ -33,7 +33,7 @@
             <span mat-symbol="person" class="input-icon"></span>
             <input
               type="text"
-              placeholder="Code"
+              placeholder="Account Code"
               class="login-input"
               id="code"
               formControlName="code"
@@ -50,10 +50,10 @@
           >
             <span mat-symbol="error"></span>
             @if (code.errors?.['required']) {
-            <span>Code is required.</span>
+            <span>Account Code is required.</span>
             } @if (code.errors?.['minlength'] ||
             code.errors?.['maxlength']) {
-            <span>Code must be exactly 12 characters.</span>
+            <span>Account Code must be exactly 12 characters.</span>
             }
           </div>
           }
