optimize login component

--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -1,6 +1,11 @@
-<div class="login-container" [style.background-image]="getBackgroundImage()">
+<div class="login-container" [style.background-image]="currentBackgroundImage">
   <div class="login-image-section">
-    <app-slideshow [images]="slideshowImages" [currentIndex]="currentIndex"></app-slideshow>
+    <app-slideshow
+      [images]="slideshowImages"
+      [interval]="5000"
+      (slideChange)="onSlideChange($event)"
+    >
+    </app-slideshow>
   </div>
   <div class="login-form-section">
     <!-- Login Header -->
@@ -42,8 +47,7 @@
               maxlength="12"
             />
           </div>
-          @if (code && code.invalid && (code.dirty ||
-          code.touched)) {
+          @if (code && code.invalid && (code.dirty || code.touched)) {
           <div
             class="error-message slide-down"
             [ngClass]="{ show: code.invalid }"
@@ -51,8 +55,7 @@
             <span mat-symbol="error"></span>
             @if (code.errors?.['required']) {
             <span>Account Code is required.</span>
-            } @if (code.errors?.['minlength'] ||
-            code.errors?.['maxlength']) {
+            } @if (code.errors?.['minlength'] || code.errors?.['maxlength']) {
             <span>Account Code must be exactly 12 characters.</span>
             }
           </div>
@@ -80,7 +83,7 @@
             class="error-message slide-down"
             [ngClass]="{ show: password.invalid }"
           >
-          <span mat-symbol="error"></span>
+            <span mat-symbol="error"></span>
             @if (password.errors?.['required']) {
             <span>Password is required.</span>
             } @if (password.errors?.['minlength']) {
