--- a/frontend/src/app/core/components/admin/main/main.component.html
+++ b/frontend/src/app/core/components/admin/main/main.component.html
@@ -1,1 +1,151 @@
-<router-outlet></router-outlet>
+<!--Page Container-->
+
+<mat-sidenav-container class="sidenav-container">
+  <!--Side Nav Bar (Left Side)-->
+  @if (showSidenav) {
+
+  <mat-sidenav
+    #drawer
+    class="sidenav-bar"
+    fixedInViewport
+    [@slideInAnimation]
+    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'push' : 'side'"
+    [opened]="(isHandset$ | async) === false"
+  >
+    <div class="side-toolbar">
+      <img
+        src="../../../../../assets/images/pup_taguig_logo.svg"
+        alt="PUP Taguig Logo"
+        class="side-toolbar-img"
+      />
+      <div class="header-name">
+        <div class="university-name">PUP TAGUIG</div>
+        <div class="system-name">FACULTY LOADING<br />& SCHEDULING</div>
+      </div>
+    </div>
+    <mat-nav-list class="navbar-list">
+        <!--Overview-->
+        <a
+          mat-list-item
+          class="list-item"
+          routerLink="/admin/overview"
+          routerLinkActive="active-link"
+        >
+          <span mat-symbol="dashboard" matListItemIcon></span>
+          <span matListItemTitle>Overview</span>
+        </a>
+        <!--Faculty-->
+        <a
+          mat-list-item
+          class="list-item"
+          routerLink="/admin/faculty"
+          routerLinkActive="active-link"
+        >
+          <span mat-symbol="groups" matListItemIcon></span>
+          <span matListItemTitle>Faculty</span>
+        </a>
+        <!--Scheduling-->
+        <a
+          mat-list-item
+          class="list-item"
+          routerLink="/admin/scheduling"
+          routerLinkActive="active-link"
+        >
+          <span mat-symbol="schedule" matListItemIcon></span>
+          <span matListItemTitle>Scheduling</span>
+        </a>
+        <!--Reports-->
+        <a
+          mat-list-item
+          class="list-item"
+          routerLink="/admin/reports"
+          routerLinkActive="active-link"
+        >
+          <span mat-symbol="bar_chart" matListItemIcon></span>
+          <span matListItemTitle>Reports</span>
+        </a>
+        <!--Help-->
+        <a
+          mat-list-item
+          class="list-item"
+          routerLink="/admin/help"
+          routerLinkActive="active-link"
+        >
+          <span mat-symbol="help" matListItemIcon></span>
+          <span matListItemTitle>Help</span>
+        </a>
+      </mat-nav-list>
+  </mat-sidenav>
+  }
+
+  <!--Side Nav Content (Right Side)-->
+  <mat-sidenav-content class="sidenav-content">
+    <!--Main Toolbar-->
+    <mat-toolbar class="main-toolbar">
+      <!--Displays toggle sidenav button-->
+      @if (isHandset$ | async) {
+      <div class="toggle-button-container">
+        <button
+          type="button"
+          aria-label="Toggle sidenav"
+          mat-icon-button
+          (click)="drawer.toggle()"
+          class="toggle-button"
+        >
+          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        </button>
+      </div>
+      }
+
+      <!--Actual sidenav content-->
+      <header class="sidenav-header">
+        <!--Page Title-->
+        <div class="title-container">
+          <h1 class="page-title">{{ pageTitle }}</h1>
+        </div>
+
+        <!-- Admin Account -->
+        <div class="header-account">
+          <div class="account-text">
+            <div class="account-name">{{ accountName }}</div>
+            <div class="account-role">PUPT-FLSS {{ accountRole }}</div>
+          </div>
+          <div class="profile-dropdown">
+            <img
+              src="../../../../../assets/images/default_admin_icon.png"
+              alt="Profile Icon"
+              class="profile-icon"
+              (click)="toggleDropdown()"
+              matTooltip="Click to open settings"
+              matTooltipPosition="below"
+            />
+            @if (isDropdownOpen) {
+            <div class="dropdown-menu">
+              <span class="dropdown-item" (click)="toggleTheme()">
+                <span
+                  [mat-symbol]="
+                    (themeService.isDarkTheme$ | async)
+                      ? 'light_mode'
+                      : 'dark_mode'
+                  "
+                ></span>
+
+                Switch Theme
+              </span>
+              <span class="dropdown-item logout" (click)="logout()">
+                <span mat-symbol="logout"></span>
+                Logout
+              </span>
+            </div>
+            }
+          </div>
+        </div>
+      </header>
+    </mat-toolbar>
+    <!-- Main Content -->
+    <div class="sidenav-main">
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
