display dynamic "no <table-name> added" message

--- a/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
@@ -18,6 +18,7 @@
     <app-table-generic
       [columns]="columns"
       [data]="semester.courses"
+      [tableName]="'course/s'"
       [displayedColumns]="displayedColumns"
       [showTableHeading]="true"
       [tableHeadingTitle]="getSemesterDisplay(semester.semester)"
