--- a/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum.component.html
@@ -15,6 +15,7 @@
     <app-table-generic
       [columns]="columns"
       [data]="curricula"
+      [tableName]="'curriculum'"
       [displayedColumns]="displayedColumns"
       [showViewButton]="true"
       (view)="onViewCurriculum($event)"
