--- a/frontend/src/app/core/components/superadmin/maintenance/programs/programs.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/programs/programs.component.html
@@ -15,6 +15,7 @@
     <app-table-generic
       [columns]="columns"
       [data]="programs"
+      [tableName]="'programs'"
       [displayedColumns]="displayedColumns"
       (edit)="openEditProgramDialog($event)"
       (delete)="deleteProgram($event)"
