--- a/frontend/src/app/core/components/superadmin/maintenance/rooms/rooms.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/rooms/rooms.component.html
@@ -15,6 +15,7 @@
     <app-table-generic
       [columns]="columns"
       [data]="rooms"
+      [tableName]="'room/s'"
       [displayedColumns]="displayedColumns"
       (edit)="openEditRoomDialog($event)"
       (delete)="deleteRoom($event)"
