--- a/frontend/src/app/shared/table-generic/table-generic.component.html
+++ b/frontend/src/app/shared/table-generic/table-generic.component.html
@@ -81,7 +81,7 @@
     <!-- Display "No course added yet" when data is empty -->
     <tr *matNoDataRow>
       <td class="no-data-row" [attr.colspan]="displayedColumns.length">
-        No course added yet.
+        No {{tableName}} added yet.
       </td>
     </tr>
 
