add optional mat hint for dialog fields

--- a/frontend/src/app/shared/table-generic/table-generic.component.html
+++ b/frontend/src/app/shared/table-generic/table-generic.component.html
@@ -90,13 +90,15 @@
   </table>
 
   <!-- Table Paginator -->
-  <div class="paginator-container" *ngIf="dataSource.data.length > 0">
-    <mat-paginator
-      class="custom-table-paginator"
-      [length]="data.length"
-      [pageSize]="25"
-      [pageSizeOptions]="[5, 10, 25, 50]"
-      [showFirstLastButtons]="showFirstLastButtons"
-    ></mat-paginator>
-  </div>
+   @if(dataSource.data.length) {
+    <div class="paginator-container">
+      <mat-paginator
+        class="custom-table-paginator"
+        [length]="data.length"
+        [pageSize]="25"
+        [pageSizeOptions]="[5, 10, 25, 50]"
+        [showFirstLastButtons]="showFirstLastButtons"
+      ></mat-paginator>
+    </div>
+   }
 </div>
