--- a/frontend/src/app/shared/table-dialog/table-dialog.component.scss
+++ b/frontend/src/app/shared/table-dialog/table-dialog.component.scss
@@ -10,6 +10,11 @@
       width: 100%;
       padding: var(--spacing-xxs) 0;
     }
+
+    .checkbox {
+      display: block;
+      margin-bottom: var(--spacing-md);
+    }
   }
 }
 
@@ -25,14 +30,5 @@
 .table-dialog-button {
   .cancel-button {
     color: var(--primary-text) !important;
-  }
-
-  .action-button {
-    color: white !important;
-
-    &:disabled {
-      color: var(--neutral-base) !important;
-      opacity: var(--opacity-semi-opaque);
-    }
   }
 }
