add dynamic mat icon on add button

--- a/frontend/src/app/shared/table-header/table-header.component.html
+++ b/frontend/src/app/shared/table-header/table-header.component.html
@@ -54,7 +54,7 @@
       [disabled]="buttonDisabled"
       (click)="onAdd()"
     >
-      <mat-icon>add</mat-icon>
+      <mat-icon>{{addIconName}}</mat-icon>
       {{ addButtonLabel }}
     </button>
     }
