restore disabled action text styling

--- a/frontend/src/app/shared/table-dialog/table-dialog.component.scss
+++ b/frontend/src/app/shared/table-dialog/table-dialog.component.scss
@@ -31,4 +31,11 @@
   .cancel-button {
     color: var(--primary-text) !important;
   }
+
+  .action-button {
+    &:disabled {
+      color: var(--neutral-base) !important;
+      opacity: var(--opacity-semi-opaque);
+    }
+  }
 }
