add curriculum-specific programs management

--- a/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
@@ -2,11 +2,13 @@
 <div class="curriculum-header-container" [@fadeAnimation]>
     <app-table-header
     [inputFields]="headerInputFields"
-    [showAddButton]="false"
+    [addButtonLabel]="'Manage Programs'"
+    [addIconName]="'apps'"
     [showExportDialog]="true"
     [customExportOptions]="customExportOptions"
     (inputChange)="onInputChange($event)"
     (export)="onExport()"
+    (add)="onManagePrograms()"
     [selectedValues]="{ program: selectedProgram, yearLevel: selectedYear }"
   ></app-table-header>
 </div>
