--- a/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
@@ -7,6 +7,7 @@
     [showExportDialog]="true"
     [customExportOptions]="customExportOptions"
     (inputChange)="onInputChange($event)"
+    (sectionChange)="onSectionChange($event)"
     (export)="onExport()"
     (add)="onManagePrograms()"
     [selectedValues]="{ program: selectedProgram, yearLevel: selectedYear }"
