--- a/frontend/src/app/core/components/superadmin/maintenance/rooms/rooms.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/rooms/rooms.component.html
@@ -21,4 +21,14 @@
       (delete)="deleteRoom($event)"
     ></app-table-generic>
   </div>
+
+
+  <!-- PDF Preview and Export Confirmation -->
+  @if (showPreview) {
+    <div class="pdf-preview-container">
+      <button mat-button (click)="cancelPreview()">Cancel</button>
+      <iframe id="pdfPreview" width="100%" height="600px"></iframe>
+    </div>
+  }
 </div>
+  
