--- a/frontend/src/app/core/components/superadmin/maintenance/programs/programs.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/programs/programs.component.html
@@ -21,4 +21,11 @@
       (delete)="deleteProgram($event)"
     ></app-table-generic>
   </div>
+
+  @if (showPreview) {
+    <div class="pdf-preview-container">
+      <button mat-button (click)="cancelPreview()">Cancel</button>
+      <iframe id="pdfPreview" width="100%" height="600px"></iframe>
+    </div>
+  }
 </div>
