add profile border

--- a/frontend/src/app/core/components/superadmin/main/main.component.scss
+++ b/frontend/src/app/core/components/superadmin/main/main.component.scss
@@ -153,6 +153,7 @@ mat-sidenav-content {
             border-radius: 50%;
             cursor: pointer;
             transition: all 0.3s ease;
+            @include gradient-border-primary(3px);
 
             &:hover {
               box-shadow: 0 0 0 3px var(--neutral-hover);
