--- a/frontend/src/app/core/components/admin/main/main.component.scss
+++ b/frontend/src/app/core/components/admin/main/main.component.scss
@@ -150,6 +150,7 @@
             border-radius: 50%;
             cursor: pointer;
             transition: all 0.3s ease;
+            @include gradient-border-primary(3px);
 
             &:hover {
               box-shadow: 0 0 0 3px var(--neutral-hover);
