--- a/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
@@ -1,6 +1,6 @@
 <!-- Table Header -->
 <div class="curriculum-header-container" [@fadeAnimation]>
-    <app-table-header
+  <app-table-header
     [inputFields]="headerInputFields"
     [addButtonLabel]="'Manage Programs'"
     [addIconName]="'apps'"
@@ -14,9 +14,7 @@
 </div>
 
 <div class="curriculum-detail-container" [@pageFloatUpAnimation]>
-  @for (semester of selectedSemesters; track semester.semester; let i = $index)
-  {
-  <div class="semester-container">
+  <div *ngFor="let semester of selectedSemesters; trackBy: trackBySemester" class="semester-container">
     <app-table-generic
       [columns]="columns"
       [data]="semester.courses"
@@ -31,5 +29,4 @@
       (delete)="onDeleteCourse($event)"
     ></app-table-generic>
   </div>
-  }
 </div>
