use line height md

--- a/frontend/src/app/auth/login/login.component.scss
+++ b/frontend/src/app/auth/login/login.component.scss
@@ -208,7 +208,7 @@
       text-align: center;
 
       span {
-        line-height: var(--line-height-base);
+        line-height: var(--line-height-md);
       }
 
       a {
