--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -31,8 +31,9 @@
   --font-size-4xl: 4rem;
 
   // Line heights
-  --line-height-base: 1.5;
-  --line-height-normal: 1.25;
+  --line-height-sm: 1.25;
+  --line-height-md: 1.5;
+  --line-height-lg: 1.75;
 
   // Spacing
   --spacing-xxs: 0.25rem;
