--- a/frontend/src/styles/error.scss
+++ b/frontend/src/styles/error.scss
@@ -69,7 +69,7 @@
 
       .error-description {
         font-size: var(--font-size-lg);
-        line-height: var(--line-height-base);
+        line-height: var(--line-height-md);
       }
     }
 
