--- a/frontend/src/app/core/components/admin/main/main.component.scss
+++ b/frontend/src/app/core/components/admin/main/main.component.scss
@@ -29,6 +29,7 @@
     .header-name {
       @include flex-layout($direction: column);
       text-align: center;
+      line-height: var(--line-height-md);
 
       .university-name,
       .system-name {
@@ -129,7 +130,7 @@
 
         .account-text {
           text-align: right;
-          line-height: var(--line-height-normal);
+          line-height: var(--line-height-sm);
 
           .account-name {
             font-weight: 600;
@@ -209,7 +210,7 @@
     @include default-transition;
     flex: 1;
     background-color: var(--main-bg);
-    border-radius: var(--border-radius-md);
+    border-radius: var(--border-radius-lg);
     padding: var(--spacing-md);
     overflow: auto;
     width: 100%;
