--- a/frontend/src/app/core/components/faculty/main/main.component.scss
+++ b/frontend/src/app/core/components/faculty/main/main.component.scss
@@ -137,6 +137,7 @@
         border-radius: 50%;
         cursor: pointer;
         transition: all 0.3s ease;
+        @include gradient-primary-border;
 
         &:hover {
           box-shadow: 0 0 0 3px var(--neutral-hover);
