--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -1,1 +1,148 @@
-<p>scheduling works!</p>
+<div class="scheduling-container">
+  <div class="scheduling-header-container" [@fadeAnimation]>
+    <app-table-header
+      [inputFields]="headerInputFields"
+      [showExportButton]="false"
+      [showAddButton]="false"
+      [showActiveYearAndSem]="true"
+      [showButtons]="false"
+      (inputChange)="onInputChange($event)"
+      [selectedValues]="{
+        program: selectedProgram,
+        yearLevel: selectedYear,
+        curriculum: selectedCurriculum
+      }"
+    ></app-table-header>
+  </div>
+
+  <div class="scheduling-table-container" [@pageFloatUpAnimation]>
+    <div class="table-container">
+      <table mat-table [dataSource]="schedules" class="custom-table">
+        <!-- Index Column -->
+        <ng-container matColumnDef="index">
+          <th mat-header-cell *matHeaderCellDef class="custom-header">#</th>
+          <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
+        </ng-container>
+
+        <!-- Course Code Column -->
+        <ng-container matColumnDef="course_code">
+          <th mat-header-cell *matHeaderCellDef class="custom-header">
+            Course Code
+          </th>
+          <td mat-cell *matCellDef="let element" class="custom-cell">
+            {{ element.course_code }}
+          </td>
+        </ng-container>
+
+        <!-- Course Title Column -->
+        <ng-container matColumnDef="course_title">
+          <th mat-header-cell *matHeaderCellDef class="custom-header">
+            Course Title
+          </th>
+          <td mat-cell *matCellDef="let element" class="custom-cell">
+            {{ element.course_title }}
+          </td>
+        </ng-container>
+
+        <!-- Lec Hours Column -->
+        <ng-container matColumnDef="lec_hours">
+          <th mat-header-cell *matHeaderCellDef class="custom-header">
+            Lec
+          </th>
+          <td mat-cell *matCellDef="let element" class="custom-cell">
+            {{ element.lec_hours }}
+          </td>
+        </ng-container>
+
+        <!-- Lab Hours Column -->
+        <ng-container matColumnDef="lab_hours">
+          <th mat-header-cell *matHeaderCellDef class="custom-header">
+            Lab
+          </th>
+          <td mat-cell *matCellDef="let element" class="custom-cell">
+            {{ element.lab_hours }}
+          </td>
+        </ng-container>
+
+        <!-- Units Column -->
+        <ng-container matColumnDef="units">
+          <th mat-header-cell *matHeaderCellDef class="custom-header">Units</th>
+          <td mat-cell *matCellDef="let element" class="custom-cell">
+            {{ element.units }}
+          </td>
+        </ng-container>
+
+        <!-- Tuition Hours Column -->
+        <ng-container matColumnDef="tuition_hours">
+          <th mat-header-cell *matHeaderCellDef class="custom-header">
+            Tuition<br>Hours
+          </th>
+          <td mat-cell *matCellDef="let element" class="custom-cell">
+            {{ element.tuition_hours }}
+          </td>
+        </ng-container>
+
+        <!-- Day Column -->
+        <ng-container matColumnDef="day">
+          <th mat-header-cell *matHeaderCellDef class="custom-header">Day</th>
+          <td mat-cell *matCellDef="let element" class="custom-cell">
+            <button
+              mat-button
+              class="table-button"
+              (click)="openDialog('day', element)"
+            >
+              {{ element.day || "Select Day" }}
+            </button>
+          </td>
+        </ng-container>
+
+        <!-- Time Column -->
+        <ng-container matColumnDef="time">
+          <th mat-header-cell *matHeaderCellDef class="custom-header">Time</th>
+          <td mat-cell *matCellDef="let element" class="custom-cell">
+            <button
+              mat-button
+              class="table-button"
+              (click)="openDialog('time', element)"
+            >
+              {{ element.time || "Select Time" }}
+            </button>
+          </td>
+        </ng-container>
+
+        <!-- Professor Column -->
+        <ng-container matColumnDef="professor">
+          <th mat-header-cell *matHeaderCellDef class="custom-header">
+            Professor
+          </th>
+          <td mat-cell *matCellDef="let element" class="custom-cell">
+            <button
+              mat-button
+              class="table-button"
+              (click)="openDialog('professor', element)"
+            >
+              {{ element.professor || "Select Professor" }}
+            </button>
+          </td>
+        </ng-container>
+
+        <!-- Room Column -->
+        <ng-container matColumnDef="room">
+          <th mat-header-cell *matHeaderCellDef class="custom-header">Room</th>
+          <td mat-cell *matCellDef="let element" class="custom-cell">
+            <button
+              mat-button
+              class="table-button"
+              (click)="openDialog('room', element)"
+            >
+              {{ element.room || "Select Room" }}
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </div>
+  </div>
+</div>
