--- a/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
@@ -1,32 +1,35 @@
 <!-- Table Header -->
 <div class="curriculum-header-container" [@fadeAnimation]>
   <app-table-header
-    [inputFields]="headerInputFields"
-    [addButtonLabel]="'Manage Programs'"
-    [addIconName]="'apps'"
-    [showExportDialog]="true"
-    [customExportOptions]="customExportOptions"
-    (inputChange)="onInputChange($event)"
-    (export)="onExport()"
-    (add)="onManagePrograms()"
-    [selectedValues]="{ program: selectedProgram, yearLevel: selectedYear }"
-  ></app-table-header>
+  [inputFields]="headerInputFields"
+  [addButtonLabel]="'Manage Programs'"
+  [addIconName]="'apps'"
+  [showExportDialog]="true"
+  [customExportOptions]="customExportOptions"
+  (inputChange)="onInputChange($event)"
+  (export)="onExport()"
+  (add)="onManagePrograms()"
+  [selectedValues]="{ program: selectedProgram, yearLevel: selectedYear }"
+></app-table-header>
 </div>
 
 <div class="curriculum-detail-container" [@pageFloatUpAnimation]>
-  <div *ngFor="let semester of selectedSemesters; trackBy: trackBySemester" class="semester-container">
-    <app-table-generic
-      [columns]="columns"
-      [data]="semester.courses"
-      [tableName]="'course/s'"
-      [displayedColumns]="displayedColumns"
-      [showTableHeading]="true"
-      [tableHeadingTitle]="getSemesterDisplay(semester.semester)"
-      [tableHeadingButtonText]="'Add Course'"
-      [tableHeadingButtonIcon]="'add'"
-      (tableHeadingButtonClick)="onAddCourse(semester.semester)"
-      (edit)="onEditCourse($event)"
-      (delete)="onDeleteCourse($event)"
-    ></app-table-generic>
-  </div>
+@for (semester of selectedSemesters; track semester.semester; let i = $index)
+{
+<div class="semester-container">
+  <app-table-generic
+    [columns]="columns"
+    [data]="semester.courses"
+    [tableName]="'course/s'"
+    [displayedColumns]="displayedColumns"
+    [showTableHeading]="true"
+    [tableHeadingTitle]="getSemesterDisplay(semester.semester)"
+    [tableHeadingButtonText]="'Add Course'"
+    [tableHeadingButtonIcon]="'add'"
+    (tableHeadingButtonClick)="onAddCourse(semester.semester)"
+    (edit)="onEditCourse($event)"
+    (delete)="onDeleteCourse($event)"
+  ></app-table-generic>
+</div>
+}
 </div>
